WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
88987
[Chromium] Fix Clang build with USE(NATIVE_FULLSCREEN_VIDEO)=1
https://bugs.webkit.org/show_bug.cgi?id=88987
Summary
[Chromium] Fix Clang build with USE(NATIVE_FULLSCREEN_VIDEO)=1
Peter Beverloo
Reported
2012-06-13 04:28:10 PDT
[Chromium] Fix Clang build with USE(NATIVE_FULLSCREEN_VIDEO)=1
Attachments
Patch
(2.33 KB, patch)
2012-06-13 04:29 PDT
,
Peter Beverloo
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Peter Beverloo
Comment 1
2012-06-13 04:29:52 PDT
Created
attachment 147288
[details]
Patch
Hans Wennborg
Comment 2
2012-06-13 05:26:56 PDT
Looks good to me. Note that this does not just "fix the Clang build". It also presumably makes the code work, because without the const qualifier, the function doesn't override anything, and won't get called.
Simon Hausmann
Comment 3
2012-06-13 08:01:49 PDT
Comment on
attachment 147288
[details]
Patch r=me
WebKit Review Bot
Comment 4
2012-06-13 08:29:53 PDT
Comment on
attachment 147288
[details]
Patch Clearing flags on attachment: 147288 Committed
r120213
: <
http://trac.webkit.org/changeset/120213
>
WebKit Review Bot
Comment 5
2012-06-13 08:29:59 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug