[Chromium] Fix Clang build with USE(NATIVE_FULLSCREEN_VIDEO)=1 https://bugs.webkit.org/show_bug.cgi?id=88987

Reviewed by Simon Hausmann.

The enterFullscreen method is declared as const by MediaPlayerPrivateInterface,
so this one should be declared as such as well.


* src/WebMediaPlayerClientImpl.cpp:
(WebKit::WebMediaPlayerClientImpl::enterFullscreen):
* src/WebMediaPlayerClientImpl.h:
(WebMediaPlayerClientImpl):


Canonical link: https://commits.webkit.org/106834@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@120213 268f45cc-cd09-0410-ab3c-d52691b4dbfc